# NeuroCode

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
functions/: createFolderAndFile.py  createReactApp.py  executeFunctions.py  getFilesInfo.py  run_python_file.py  run_react_app.py
functions/dependencies/: install_python_dependencies.py
neurocode/: main.py
neurocode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
neurocode/functions/: executeFunctions.py
neurocode/functions/dependencies/: install_dependencies.py
neurocode/functions/file_operations/: writeIntoFile.py
neurocode/functions/image_analysis/: analyzeImage.py
neurocode/functions/mcp/: mcp_connection.py
neurocode/functions/web_analysis/: analyzeWebpage.py
neurocode/utils/: __init__.py  file_dialog.py
tests/: __init__.py  conftest.py  test_dependencies.py  test_execution.py  test_file_operations.py  test_image_analysis.py  test_project_creation.py  test_web_analysis.py
