[project]
name = "neurocode"
version = "0.1.0"
description = "AI coding agent CLI"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "colorama>=0.4.6",
    "google-genai>=1.65.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]

[project.scripts]
neurocode = "neurocode.main:main"
