[project]
name = "neurocode"
version = "0.1.0"
description = "AI coding agent CLI"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "colorama>=0.4.6",
    "google-genai>=1.65.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "pillow>=10.0.0",
    "transformers>=4.40.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pytest",
    "torch>=2.11.0",
    "fastmcp>=3.2.0",
    "fastapi-mcp>=0.4.0",
    "mcp>=1.27.0",
    "anthropic>=0.89.0",
    "PySide6>=6.6.0",
]

[project.scripts]
neurocode = "neurocode.main:main"
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["neurocode", "neurocode.images"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
